# cqdyn

./: CITATION.cff  LICENSE  README.md  cQDyn.py  pyproject.toml
src/cqdyn/: __init__.py  cqdyn.py
